test/deca/context/invalid/3_8_field_init.deca
// Description:
//    field intialization false
//
// Resultats:
//    Ligne

class A {
   int a =;
}
